# functiongemma-integration

./: API_ENDPOINTS_COVERAGE.md  EDGE_GALLERY_GUIDE.md  README.md  edge_gallery_schema.json
edge_runtime/: CMakeLists.txt
edge_runtime/examples/: example_inference.cc  example_voice_control.cc
edge_runtime/litert_runtime/: function_parser.cc  function_parser.h  inference_engine.cc  inference_engine.h  model_loader.cc  model_loader.h
edge_runtime/mqtt_bridge/: README.md  functiongemma_mqtt_bridge.py  requirements.txt
edge_runtime/ros2_bridge/: functiongemma_ros2_bridge.py  offline_command_server.py
examples/: offline_mode_demo.py  swarm_control_demo.py  voice_command_demo.py
function_schemas/: gemma_config.yaml  nwo_robotics_functions.json  system_prompt.txt
mobile_app/android/: build.gradle
mobile_app/android/app/: build.gradle
mobile_app/android/app/src/main/: AndroidManifest.xml
mobile_app/android/app/src/main/java/com/nwo/robotics/: FunctionGemmaManager.kt  MainActivity.kt  NwoApiClient.kt  NwoRoboticsApp.kt  SafetyManager.kt  VoiceCommandProcessor.kt
mobile_app/android/app/src/main/res/layout/: activity_main.xml
mobile_app/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
mobile_app/ios/: Podfile
mobile_app/ios/NwoRoboticsController/: AppDelegate.swift  FunctionGemmaManager.swift  NwoApiClient.swift  SafetyManager.swift  VoiceCommandProcessor.swift
training/datasets/: nwo_commands_train.jsonl  nwo_commands_val.jsonl
training/fine_tuning/: convert_to_litert.py  prepare_nwo_dataset.py  train_functiongemma.py
